@@ -89,6 +89,9 @@ Release 0.20.2 - Unreleased
     HDFS-101. DFS write pipeline: DFSClient sometimes does not detect second
     datanode failure. (hairong)
 
+    HADOOP-5623. Fixes a problem to do with status messages getting overwritten
+    in streaming jobs. (Rick Cox and Jothi Padmanabhan via tomwhite)
+
 Release 0.20.1 - 2009-09-01
 
   INCOMPATIBLE CHANGES
